--- a/research.html
+++ b/research.html
@@ -115,7 +115,7 @@
       Authors: Milani H., Bijvank M., Piri H.</p>
       <p>Using the OncoSim-Breast microsimulation model, we evaluate cost-effectiveness and harm-to-benefit ratios of various breast cancer screening strategies. This includes hybrid policies combining annual and triennial intervals. Our findings suggest hybrid strategies beginning at age 45 offer superior outcomes compared to current guidelines.</p>
       <div class="links">
-        <a href="simulation_preprint.pdf" target="_blank">Download Preprint (last update: April 26, 2025)</a>
+        <a href="Milani_et_al_2024_Trade_offs_of_Breast_Cancer_Screening_Scenarios.pdf" target="_blank">Download Preprint (last update: April 26, 2025)</a>
       </div>
     </div>
 
