--- a/research.html
+++ b/research.html
@@ -105,7 +105,7 @@
       Authors: Milani H., Bijvank M., Piri H.</p>
       <p>We develop a unified framework for breast cancer screening and diagnostic decisions using a Partially Observable Markov Decision Process (POMDP). By combining screening timing and diagnostic follow-up into one model, we aim to improve efficiency and personalization in breast cancer pathways. The model highlights how the interdependence of decisions can affect overall outcomes.</p>
       <div class="links">
-        <a href="POMDP_proposal.pdf" target="_blank">Download Proposal (last update: April 26, 2025)</a>
+        <a href="Milani_Proposal_Personalized_Breast_Cancer_Screening_and_Diagnostic_Decisions.pdf" target="_blank">Download Proposal (last update: April 26, 2025)</a>
       </div>
     </div>
 
