--- a/research.html
+++ b/research.html
@@ -82,7 +82,7 @@
     <div class="project">
       <h2>Working Paper</h2>
       <p><strong>“Trade-offs of Breast Cancer Screening Scenarios in Canada: A Microsimulation Modeling Study”</strong><br>
-      Authors: Milani H., Bijvank M., Piri H.</p>
+      Authors: Milani H., Bijvank M., Piri H., Khan O., Brenner D.</p>
       <p>Using the OncoSim-Breast microsimulation model, we evaluate cost-effectiveness and harm-to-benefit ratios of various breast cancer screening strategies. This includes hybrid policies combining annual and triennial intervals. Our findings suggest hybrid strategies beginning at age 45 offer superior outcomes compared to current guidelines.</p>
       <div class="links">
         <a href="Milani_et_al_2024_Trade_offs_of_Breast_Cancer_Screening_Scenarios.pdf" target="_blank">Download Preprint (last update: November 26, 2025)</a>
@@ -92,7 +92,7 @@
     <div class="project">
       <h2>Working Paper</h2>
       <p><strong>“Personalized Breast Cancer Screening by Combining Screening and Diagnostic Decisions”</strong><br>
-      Authors: Milani H., Bijvank M., Piri H.</p>
+      Authors: Milani H.</p>
       <p>We develop a unified framework for breast cancer screening and diagnostic decisions using a Partially Observable Markov Decision Process (POMDP). By combining screening timing and diagnostic follow-up into one model, we aim to improve efficiency and personalization in breast cancer pathways. The model highlights how the interdependence of decisions can affect overall outcomes.</p>
       <div class="links">
         <a href="Milani_Proposal_Personalized_Breast_Cancer_Screening_and_Diagnostic_Decisions.pdf" target="_blank">Download Proposal (last update: November 26, 2025)</a>
