--- a/research.html
+++ b/research.html
@@ -95,7 +95,9 @@
       Authors: Milani H.</p>
       <p>We develop a unified framework for breast cancer screening and diagnostic decisions using a Partially Observable Markov Decision Process (POMDP). By combining screening timing and diagnostic follow-up into one model, we aim to improve efficiency and personalization in breast cancer pathways. The model highlights how the interdependence of decisions can affect overall outcomes.</p>
       <div class="links">
-        <a href="Milani_Proposal_Personalized_Breast_Cancer_Screening_and_Diagnostic_Decisions.pdf" target="_blank">Download Proposal (last update: November 26, 2025)</a>
+        <a href="Milani_Proposal_Personalized_Breast_Cancer_Screening_and_Diagnostic_Decisions.pdf" target="_blank">Download Proposal (based on UK Cancer Statistics) (last update: November 26, 2025)</a>
+        <a href="Milani_Proposal_Personalized_Breast_Cancer_Screening_and_Diagnostic_Decisions_AUS.pdf" target="_blank">Download Proposal (based on Australia Cancer Statistics) (last update: November 26, 2025)</a>
+        <a href="Milani_Proposal_Personalized_Breast_Cancer_Screening_and_Diagnostic_Decisions_FIN.pdf" target="_blank">Download Proposal (based on Finland Cancer Statistics) (last update: November 26, 2025)</a>
       </div>
     </div>
 
