--- a/research.html
+++ b/research.html
@@ -82,18 +82,18 @@
     <div class="project">
       <h2>Working Paper</h2>
       <p><strong>“Trade-offs of Breast Cancer Screening Scenarios in Canada: A Microsimulation Modeling Study”</strong><br>
-      Authors: Milani H., Bijvank M., Piri H., Khan O., Brenner D.</p>
-      <p>Using the OncoSim-Breast microsimulation model, we evaluate cost-effectiveness and harm-to-benefit ratios of various breast cancer screening strategies. This includes hybrid policies combining annual and triennial intervals. Our findings suggest hybrid strategies beginning at age 45 offer superior outcomes compared to current guidelines.</p>
+      Authors: Milani H., Bijvank M., Piri H., Brenner D.</p>
+      <p>, Khan O.</p>
       <div class="links">
         <a href="Milani_et_al_2024_Trade_offs_of_Breast_Cancer_Screening_Scenarios.pdf" target="_blank">Download Preprint (last update: November 26, 2025)</a>
       </div>
     </div>
 
     <div class="project">
-      <h2>Working Paper</h2>
-      <p><strong>“Personalized Breast Cancer Screening by Combining Screening and Diagnostic Decisions”</strong><br>
+      <h2>Proposal</h2>
+      <p><strong>“Personalized Breast Cancer Prevention by Combining Screening and Diagnostic Decisions”</strong><br>
       Authors: Milani H.</p>
-      <p>We develop a unified framework for breast cancer screening and diagnostic decisions using a Partially Observable Markov Decision Process (POMDP). By combining screening timing and diagnostic follow-up into one model, we aim to improve efficiency and personalization in breast cancer pathways. The model highlights how the interdependence of decisions can affect overall outcomes.</p>
+      <p>Mammography screening effectively reduces breast cancer mortality but suffers from high false-positive rates and unnecessary follow-ups. To address these two inefficiencies, this proposal introduces a unified, personalized screening and diagnostic framework based on a novel partially observable Markov decision process (POMDP) model that jointly optimizes screening schedules and follow-up diagnostic decisions, addressing the long-standing gap where these two decisions are treated separately despite their strong sequential dependence.</p>
       <div class="links">
         <a href="Milani_Proposal_Personalized_Breast_Cancer_Screening_and_Diagnostic_Decisions.pdf" target="_blank">Download Proposal (based on UK Cancer Statistics) (last update: November 26, 2025)</a>
         <a href="Milani_Proposal_Personalized_Breast_Cancer_Screening_and_Diagnostic_Decisions_AUS.pdf" target="_blank">Download Proposal (based on Australia Cancer Statistics) (last update: November 26, 2025)</a>
