--- a/cv.html
+++ b/cv.html
@@ -7,7 +7,7 @@
 <body>
   <h1 style="text-align:center;">Curriculum Vitae</h1>
   <p style="text-align:center;">CV</p>
-  <a href="cv.pdf" target="_blank">Download my CV (PDF)</a>
+  <a href="CV_Hamed_Milani.pdf" target="_blank">Download my CV (PDF)</a>
 
 </body>
 </html>
