--- a/research.html
+++ b/research.html
@@ -83,7 +83,7 @@
       <h2>Working Paper</h2>
       <p><strong>“Trade-offs of Breast Cancer Screening Scenarios in Canada: A Microsimulation Modeling Study”</strong><br>
       Authors: Milani H., Bijvank M., Piri H., Brenner D.</p>
-      <p>, Khan O.</p>
+      <p>In this paper, we conducted cost-effectiveness, cost-utility, and harm-to-benefit analyses of breast cancer screening policies using the OncoSim-Breast, a validated microsimulation model. We assessed a wide range of public-level strategies, including hybrid policies that are rarely examined in the literature, offering one of the first economic evaluations based on this model. Given that even small modifications to screening designs can have substantial health and economic implications, our multidimensional analysis supports more informed public policy decision-making.</p>
       <div class="links">
         <a href="Milani_et_al_2024_Trade_offs_of_Breast_Cancer_Screening_Scenarios.pdf" target="_blank">Download Preprint (last update: November 26, 2025)</a>
       </div>
