--- a/projects.html
+++ b/projects.html
@@ -98,7 +98,7 @@
                 <!--<p>This tool uses an optimization model to solve the Nurse Scheduling Problem considering the nurses' preferences and satisfaction.</p>-->
             <!--</li>-->
             <li class="project-item">
-                <h2><a href="projects/helsa/nsp_ui.html">Helsa Nurse Scheduling Software</a></h2>
+                <h2><a href="projects/helsa/nsp_ui.html">Helsa Nurse Scheduling Application</a></h2>
                 <p>This tool uses an optimization model to solve the Nurse Scheduling Problem considering the nurses' preferences and satisfaction.</p>
             </li>
             <li class="project-item">
