--- a/projects.html
+++ b/projects.html
@@ -104,7 +104,7 @@
             </li>
             <li class="project-item">
                 <h2><a href="projects/chess/index.html">CHESS</a></h2>
-                <p>CHESS</p>
+                <p>Interactive chess board with 10-minute timers, drag-and-drop moves, legal move highlighting, and custom position loading.</p>
             </li>
                 
                 
