--- a/research.html
+++ b/research.html
@@ -92,7 +92,7 @@
     <div class="project">
       <h2>Proposal</h2>
       <p><strong>“Personalized Breast Cancer Prevention by Combining Screening and Diagnostic Decisions”</strong><br>
-      Authors: Milani H.</p>
+      Author: Milani H.</p>
       <p>Mammography screening effectively reduces breast cancer mortality but suffers from high false-positive rates and unnecessary follow-ups. To address these two inefficiencies, this proposal introduces a unified, personalized screening and diagnostic framework based on a novel partially observable Markov decision process (POMDP) model that jointly optimizes screening schedules and follow-up diagnostic decisions, addressing the long-standing gap where these two decisions are treated separately despite their strong sequential dependence.</p>
       <div class="links">
         <a href="Milani_Proposal_Personalized_Breast_Cancer_Screening_and_Diagnostic_Decisions.pdf" target="_blank">Download Proposal (based on UK Cancer Statistics) (last update: December 26, 2025)</a>
